# MoveMyWine

./: .pre-commit-config.yaml  Dockerfile  README.md  app.py  constant.py  pyproject.toml  render.yaml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: main.yml  pytest.yml
data/chronopost/: tarif_structure.csv
data/dbschenker/: correspondance_zone_dpt.csv  tarif_par_zone.csv  tarif_structure.csv
data/geodis/: tarif_par_departement.csv  tarif_structure.csv
data/kuehne-nagel/: gnr_modulation.csv  tarif_par_departement.csv  tarif_structure.csv
data/kuehne_nagel/: tarif_par_departement.csv
data/stef/: Liste localités difficiles d'accès ou Haute Montagne.xlsx  gas_modulation.csv  gnr_modulation.csv  modulation_froid.csv  tarif_par_departement.csv  tarif_structure.csv
src/: app.py  app_constant.py  app_utils.py  calculator_tab.py  comparison_tab.py  constant.py  departement.py  draft_app.py  file_structure.py  streamlit_app.py  streamlit_utils.py  transporter.py
src/app_generics/: dash_custom_component.py  fetched_indicator.py  postal_code.py  transporter_app.py  transporter_params.py
src/chronopost/: __init__.py  app_custom.py  constant.py  cost.py
src/cost_calculator/: __init__.py  abstract_cost.py  base_cost.py  constant.py  cost_by_bottle.py  cost_by_package.py  cost_collection.py  cost_modulator.py  expedition.py  fixed_cost_by_expedition.py  gas_modulator.py  monthly_cost.py  recurrent_cost.py  total_cost.py  total_cost_calculator.py  transporter.py
src/dbschenker/: __init__.py  app_custom.py  constant.py  cost.py
src/geodis/: __init__.py  app_custom.py  constant.py  cost.py  geodis.py
src/my_transporters/: __init__.py
src/my_transporters/chronopost/: __init__.py  app_calculator.py  constant.py  cost.py  indicator_scrapper.py
src/my_transporters/dbschenker/: __init__.py  app_custom.py  constant.py  cost.py
src/old_dash_app/: calculator_tab.py  draft_app.py
src/stef/: __init__.py  app_custom.py  constant.py  cost.py  stef.py
src/transporter/: __init__.py  transporter_params.py
srcv2/: app.py  app_constant.py  calculator_tab.py  constant.py  file_structure.py  streamlit_app.py
srcv2/app_generics/: dash_custom_component.py  postal_code.py
srcv2/cost_calculator/: __init__.py  abstract_cost.py  constant.py  cost_by_bottle.py  cost_by_package.py  expedition.py  fixed_cost_by_expedition.py  gas_modulator.py  monthly_cost.py  total_cost.py
srcv2/my_transporters/: __init__.py
srcv2/transporter/: __init__.py  transporter_params.py
stef/: stef.py  tarif_par_departement.csv
test/: test_app.py  test_expedition.py
test/app_generics/: test_cnr_indicator_retriever.py
test/cost_calculator/: test_cost_by_package.py  test_cost_collection.py  test_expedition.py  test_fixed_cost.py  test_monthly_cost.py  test_total_cost.py
(+27 files in other folders)
