[tool.poetry]
name = "movemywine"
version = "0.2.2"
description = "Package to compute transport price of wine bottles. Comes with a simple stramlit app"
authors = ["Nicolas Lair <nl.nicolas.lair@gmail.com>"]
readme = "README.md"
packages = [ { include = "src" } ]

[tool.poetry.dependencies]
python = ">=3.11.4,<3.13"
pandas = "^2.2.2"
plotly = "^5.22"
numpy = "^2.2"
streamlit = "^1.41"
beautifulsoup4="^4.12"
python-dateutil = "^2.9.0.post0"
loguru = "^0.7"
openpyxl = "^3.1"
lxml = "^5.3"
babel = "^2.16"

[tool.poetry.group.dev.dependencies]
ipython = "^8.31"
ruff = "^0.8"
pre-commit = "^4.0"
pytest = "^8.3"
time-machine = "^2.16"
poetry-plugin-export = "^1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
lint.ignore-init-module-imports = true

[tool.poetry.requires-plugins]
poetry-plugin-export = "^1.8"
