[tool.poetry]
name = "movemywine"
version = "0.3.2"
description = "Package to compute transport price of wine bottles. Comes with a simple stramlit app"
authors = ["Nicolas Lair <nl.nicolas.lair@gmail.com>"]
readme = "README.md"
packages = [ { include = "src" } ]

[tool.poetry.dependencies]
python = ">=3.11.4,<3.13"
pandas = "^2.2.2"
plotly = "^6.0"
numpy = "^2.2"
streamlit = "^1.42"
beautifulsoup4="^4.13"
python-dateutil = "^2.9.0.post0"
loguru = "^0.7"
openpyxl = "^3.1"
lxml = "^5.3"
babel = "^2.17"

[tool.poetry.group.dev.dependencies]
ipython = "^8.31"
ruff = "^0.8"
pre-commit = "^4.0"
pytest = "^8.3"
time-machine = "^2.16"
poetry-plugin-export = "^1.8"
importlib_metadata = "^8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.requires-plugins]
poetry-plugin-export = "^1.8"

[tool.isort]
profile = "black"
