[project]
name = "movemywine"
version = "0.4.0"
description = "Package to compute transport price of wine bottles. Comes with a simple streamlit app"
authors = [{ name = "Nicolas Lair", email = "nl.nicolas.lair@gmail.com" }]
requires-python = ">=3.11.4,<3.13"
readme = "README.md"
dependencies = [
    "pandas>=2.2.2,<3",
    "plotly~=6.0",
    "numpy~=2.2",
    "streamlit~=1.42",
    "beautifulsoup4~=4.13",
    "python-dateutil>=2.9.0.post0,<3",
    "loguru>=0.7,<0.8",
    "openpyxl~=3.1",
    "lxml~=5.3",
    "babel~=2.17",
]

[dependency-groups]
dev = [
    "ipython~=8.31",
    "ruff>=0.8,<0.9",
    "pre-commit~=4.0",
    "pytest~=8.3",
    "time-machine~=2.16",
    "poetry-plugin-export~=1.8",
    "importlib_metadata>=8,<9",
]

[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.hatch.build.targets.wheel]
include = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.isort]
profile = "black"
